--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,11 +7,8 @@
     {
       "type": "node",
       "request": "attach",
-      "name": "Attach to Node",
-      "port": 9229,
-      "address": "localhost",
-      "localRoot": "${workspaceFolder}",
-      "remoteRoot": "/usr/src/app",
+      "name": "Attach by Process ID",
+      "processId": "${command:PickProcess}",
       "protocol": "inspector"
     }
   ]
