--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@redux-saga/delay-p": "^1.0.0-beta.2",
     "colyseus": "^0.9.19",
+    "connected-react-router": "^5.0.1",
     "history": "^4.7.2",
     "immutable": "^4.0.0-rc.9",
     "kcors": "^2.2.2",
@@ -37,7 +38,8 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.11",
-    "react-router-redux": "^4.0.8",
+    "react": "^16.6.1",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.0-beta.3",
     "require-context": "^1.1.0",
